Add endpoint to serverless to test live deploy

--- a/serverless.yml
+++ b/serverless.yml
@@ -55,8 +55,12 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
+  fetch:
     handler: app/functions/docbot.Docbot.fetch
+    events:
+      - http:
+          path: fetch
+          method: post
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
